[package]
name = "crabquery"
version = "0.1.6"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"
description = "JQuery like HTML query library"
homepage = "https://github.com/Gonzih/crabquery"
repository = "https://github.com/Gonzih/crabquery"
documentation = "https://docs.rs/crabquery"
readme = "README.md"
keywords = ["html", "dom", "css" ,"jquery", "scraper"]
license = "MIT"
license-file = "LICENSE"

[badges]
# github = { repository = "https://github.com/Gonzih/rquery", branch = "master" }

[dependencies]
html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_arcdom = "0.1.1"
